Add custom statistics endpoint for structure search job
